<resources>
    <string name="app_name">HiveNotes</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="frag1_text">fragment #1 - init msg</string>
    <string name="frag2_text">fragment #2 - init msg</string>
    <string name="frag3_text">fragment #3 - init msg</string>
    <string name="title_activity_main">HiveNotes</string>
    <string name="new_apiary_string">New Apiary</string>
    <string name="create_apiary_string">Create Apiary</string>
    <string name="update_apiary_string">Update Apiary</string>
    <string name="save_apiary_string">Save Apiary</string>
    <string name="delete_apiary_string">Delete Apiary</string>
    <string name="apiary_list_text">Apiary List:</string>
    <string name="postal_code_string">Postal Code:</string>
    <string name="new_apiary_name_string">Apiary Name:</string>
    <string name="apiary_latlon">Lat/Lon:</string>
    <string name="apiary_compute_latlon">Lat/Lon from GPS/Network</string>
    <string name="new_profile_string">New Profile</string>
    <string name="create_profile_string">Create Profile</string>
    <string name="update_profile_string">Update Profile</string>
    <string name="save_profile_string">Save Profile</string>
    <string name="delete_profile_string">Delete Profile</string>
    <string name="new_profile_name_text">Name:</string>
    <string name="new_profile_email_text">Email:</string>
    <string name="new_hive_string">New Hive</string>
    <string name="create_hive_string">Create Hive</string>
    <string name="update_hive_string">Update Hive</string>
    <string name="save_hive_string">Save Hive</string>
    <string name="delete_hive_string">Delete Hive</string>
    <string name="no_hives_string">No hives yet</string>
    <string name="hive_name_string">Hive Name:</string>
    <string name="hive_species_string">Species:</string>
    <string name="hive_foundation_type_string">Foundation Type:</string>
    <string name="weather_string">Weather</string>
    <string name="done_string">Done</string>
    <string name="db_toast_string">"DB successfully deleted =)"</string>
    <string name="db_toast_string_neg">"DB NOT deleted =("</string>
    <string name="gps_toast_string">Waiting for GPS location…</string>
    <string name="network_toast_string">Waiting for Network location…</string>
    <string name="weather_service_msg_string">Please wait..Calling weather service</string>
    <string name="title_logentry_list">LogEntries</string>
    <string name="title_logentry_detail">LogEntry Detail</string>
    <string name="create_logentry_string">Create Log Entry</string>
    <string name="save_logentry_string">Save Log Entry</string>
    <string name="hive_species_italian">Italian Bees</string>
    <string name="hive_species_carniolan">Carniolan Bees</string>
    <string name="hive_species_caucasian">Caucasian Bees</string>
    <string name="hive_species_buckfast">Buckfast Bees</string>
    <string name="hive_species_russian">Russian Bees</string>
    <string name="general_notes_date_text">Date:</string>
    <string name="general_notes_population_text">Population</string>
    <string name="general_notes_temperament_text">Temperament:</string>
    <string name="general_notes_pestsdisease_text">Pests/Disease:</string>
    <string name="general_notes_queen_text">Queen:</string>
    <string name="general_notes_broodpattern_text">Brood Pattern:</string>
    <string name="general_notes_cappedbrood_text">Capped Brood:</string>
    <string name="general_notes_broodframes_text">Brood Frames:</string>
    <string name="general_notes_honeystores_text">Honey Stores:</string>
    <string name="general_notes_pollenstores_text">Pollen Stores:</string>
    <string name="productivity_honey">Honey</string>
    <string name="productivity_add_supers">Add Supers:</string>
    <string name="productivity_remove_supers">Remove Supers:</string>
    <string name="productivity_extracted_honey">Extracted Honey:</string>
    <string name="productivity_pollen">Pollen</string>
    <string name="productivity_wax">Wax</string>
    <string name="productivity_add_trap">Add Trap</string>
    <string name="productivity_remove_trap">Remove Trap</string>
    <string name="productivity_pollen_collected">Pollen Collected:</string>
    <string name="productivity_beeswax_collected">Beeswax Collected:</string>
    <string name="productivity_varroa_mite">Varroa Mite</string>
    <string name="productivity_small_hive_beetle">Small Hive Beetle</string>
    <string name="productivity_wax_moth">Wax Moth</string>
    <string name="productivity_deformed_wing">Deformed Wing</string>
    <string name="productivity_american_foulbrood">American Foulbrood</string>
    <string name="productivity_european_foalbrood">European Foulbrood</string>
    <string name="productivity_chalkbrood">Chalkbrood</string>
    <string name="productivity_nosema">Nosema</string>
    <string name="productivity_other">Other</string>
    <string name="productivity_subtitle">YYYY Annual Totals</string>
    <string name="pestmgmt_drone_cell_fndn">Drone Cell Foundation</string>
    <string name="pestmgmt_small_hive_beetle_trap">Small Hive Beetle Trap</string>
    <string name="pestmgmt_mites_trtmnt">Mites Treatment</string>
    <string name="pestmgmt_screened_bottom_board">Screened Bottom Board</string>
    <string name="pestmgmt_other">Other</string>
    <string name="feeding_one_one_sugar">1:1 Sugar Water</string>
    <string name="feeding_two_one_sugar">2:1 Sugar Water</string>
    <string name="feeding_pollen_patty">Pollen Patty</string>
    <string name="feeding_other">Other</string>
    <string name="other_requeen">Requeen</string>
    <string name="other_requeen_rmndr">Check On Queen Release</string>
    <string name="other_swarm">Swarm</string>
    <string name="other_swarm_rmndr">Check For Swarm</string>
    <string name="other_split_hive">Split Hive</string>
    <string name="other_split_hive_rmndr">Check For Laying Queen</string>
    <string name="set_reminder_string">Set Reminder</string>
    <string name="notes_save_text">Save Notes</string>
    <string-array name="species_array">
        <item>@string/hive_species_italian</item>
        <item>@string/hive_species_carniolan</item>
        <item>@string/hive_species_caucasian</item>
        <item>@string/hive_species_buckfast</item>
        <item>@string/hive_species_russian</item>
    </string-array>
    <string-array name="feeding_array">
        <item>@string/feeding_one_one_sugar</item>
        <item>@string/feeding_two_one_sugar</item>
        <item>@string/feeding_pollen_patty</item>
    </string-array>
    <string-array name="foundation_array">
        <item>Wax</item>
        <item>Plastic</item>
        <item>Foundationless Bars</item>
    </string-array>
    <string-array name="population_array">
        <item>Crowded</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>
    <string-array name="temperament_array">
        <item>Calm</item>
        <item>Nervous</item>
        <item>Aggressive</item>
        <item>Happy</item>
        <item>Nasty</item>
        <item>OK</item>
        <item>Standoffish</item>
        <item>Easygoing</item>
    </string-array>
    <string-array name="queen_array">
        <item>Queen Right</item>
        <item>Queen Left</item>
        <item>Unsure</item>
        <item>Queen cells present</item>
    </string-array>
    <string-array name="brood_pattern_array">
        <item>Good Pattern</item>
        <item>Fair Pattern</item>
        <item>Poor Pattern</item>
    </string-array>
    <string-array name="pests_array">
        <item>@string/productivity_small_hive_beetle</item>
        <item>@string/productivity_wax_moth</item>
    </string-array>
    <string-array name="disease_array">
        <item>@string/productivity_deformed_wing</item>
        <item>@string/productivity_american_foulbrood</item>
        <item>@string/productivity_european_foalbrood</item>
        <item>@string/productivity_chalkbrood</item>
        <item>@string/productivity_nosema</item>
    </string-array>
    <string-array name="stores_array">
        <item>High</item>
        <item>Average</item>
        <item>Low</item>
    </string-array>
    <string-array name="requeen_array">
        <item>Unmarked</item>
        <item>Marked - White or Grey</item>
        <item>Marked - Yellow</item>
        <item>Marked - Red</item>
        <item>Marked - Green</item>
        <item>Marked - Blue</item>
    </string-array>
    <string name="varroa_treatment">Varroa Treatment</string>
    <string name="varroa_apivar">Apivar</string>
    <string name="varroa_checkmite">Checkmite+</string>
    <string name="varroa_apiguard">Apiguard</string>
    <string name="varroa_apilifevar">Api Life Var</string>
    <string name="varroa_miteawayquickstrips">Mite Away Quick Strips</string>
    <string name="varroa_oxalicacid">Oxalic Acid</string>
    <string name="varroa_hopeguard">Hopeguard</string>
    <string-array name="varroa_array">
        <item>@string/varroa_apivar</item>
        <item>@string/varroa_checkmite</item>
        <item>@string/varroa_apiguard</item>
        <item>@string/varroa_apilifevar</item>
        <item>@string/varroa_miteawayquickstrips</item>
        <item>@string/varroa_oxalicacid</item>
        <item>@string/varroa_hopeguard</item>
    </string-array>
    <string-array name="events_array">
        <item>@string/other_swarm</item>
        <item>@string/other_split_hive</item>
        <item>@string/other_requeen</item>
    </string-array>
    <string-array name="test_array">
        <item>Unmarked - Unmarked</item>
        <item>Unmarked - Marked</item>
        <item>Marked - White or Grey</item>
        <item>Marked - Yellow</item>
        <item>Marked - Red</item>
        <item>Marked - Green</item>
        <item>Marked - Purple</item>
        <item>Marked - Cyan</item>
        <item>Marked - Orange</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pestmgmt_notes_string">Pest Management</string>
    <string name="general_notes_log_string">Log</string>
    <string name="productivity_notes_string">Productivity</string>
    <string name="hivehealth_notes_string">Hive Health</string>
    <string name="feeding_notes_string">Feeding</string>
    <string name="other_notes_string">Other</string>
    <string name="events_notes_string">Events</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_apiary_edit_profile">EditApiaryActivity</string>
    <string name="title_hive_single_edit_profile">EditHiveSingleActivity</string>
    <string name="hive_note_string">Notes:</string>
    <string name="set">Set</string>
    <string name="unset">Unset</string>
    <string name="save_string">Save</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="set_to_current">Set to current date</string>
    <string name="title_activity_log_date_list">LogDateListActivity</string>
    <string name="existing"> (EXISTING)</string>
    <string name="graph_selection">Graph Selection</string>
    <string name="add_graph">Add Graph</string>
    <string name="graph">Graph</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="retrieve_graph_data">Please wait...Collecting data to graph</string>
    <string name="retrieve_graph_data_complete">Retrieve graphable data complete...</string>
    <string name="welcome_to">Welcome To</string>
    <string name="drop_db">Drop DB</string>
    <string name="hive_notes">Hive Notes</string>
    <string name="create_profile">Create Profile</string>
    <string name="edit_profile">Edit Profile</string>
</resources>