<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.tscloud.hivenotes.LogPestMgmtFragment">

    <TextView
        android:id="@+id/textPestMgmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pestmgmt_notes_string"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linearLayoutDroneCellFndn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textPestMgmt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkDroneCellFndn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/pestmgmt_drone_cell_fndn"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDroneCellFndnRmndr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutDroneCellFndn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/textViewDroneCellFndnRmndr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/no_reminder_set"
            android:ems="10" />

        <Button
            android:id="@+id/buttonDroneCellFndn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder_string" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSmallHiveBeetleTrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayoutDroneCellFndnRmndr"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkSmallHiveBeetleTrap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/pestmgmt_small_hive_beetle_trap"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMitesTrtmntCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutSmallHiveBeetleTrap"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkMitesTrtmnt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/pestmgmt_mites_trtmnt"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/editTextMitesTrtmnt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMitesTrtmntRmndr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutMitesTrtmntCheck"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/textViewMitesTrtmntRmndr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/no_reminder_set"
            android:ems="10" />

        <Button
            android:id="@+id/buttonMitesTrtmnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_reminder_string" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutScreenedBottomBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutMitesTrtmntRmndr"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkScreenedBottomBoard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/pestmgmt_screened_bottom_board"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPestOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayoutScreenedBottomBoard"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkPestOther"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/pestmgmt_other"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/editTextPestOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

    </LinearLayout>

    <include
        android:id="@+id/savePestMgmtButton"
        layout="@layout/hive_note_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/hiveLine" />

    <View
        android:id="@+id/hiveLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
