<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LogFeedingFragment">

    <TextView
        android:id="@+id/textFeeding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/feeding_notes_string"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/linearLayoutOneOneSugar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/textFeeding"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkOneOneSugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/feeding_one_one_sugar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTwoOneSugar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutOneOneSugar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkTwoOneSugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/feeding_two_one_sugar" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPollenPatty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutTwoOneSugar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkPollenPatty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/feeding_pollen_patty" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFeedingOther"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayoutPollenPatty"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <CheckBox
            android:id="@+id/checkFeedingOther"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/feeding_other"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFeedingOtherText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayoutFeedingOther"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:id="@+id/editTextFeedingOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />

    </LinearLayout>

    <include
        android:id="@+id/saveFeedingButton"
        layout="@layout/hive_note_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
